feat(domain): implemented password hash
